# polars-schema-index

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/polars_schema_index/: __init__.py
tests/: struct_core_test.py
