[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11.6,<0.12"]

[dependency-groups]
dev = [
  "pytest>=8.3.4"
]
test = [
    "pytest>=8.3.4",
]

[project]
name = "polars-schema-index"
version = "0.1.2"
description = "A Polars plugin for flattening nested data"
readme = "README.md"
authors = [
  {name = "Louis Maddox", email = "louismmx@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
  "polars>=1.36.0",
  "polars-permute>=0.1.2"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]

[project.optional-dependencies]
lts-cpu = ["polars[rtcompat]>=1.36"]

[project.urls]
Homepage = "https://github.com/lmmx/polars-schema-index"
Repository = "https://github.com/lmmx/polars-schema-index.git"

[tool.uv]
default-groups = "all"
